# perfect_presentation

./: .gitignore  LICENSE.txt  Readme.md  build.gradle  gradle.properties  settings.gradle
native/: Cargo.toml  build.gradle
native/perfect_presentation_core/: Cargo.toml
native/perfect_presentation_core/src/: blit_shader.hlsl  lib.rs  wgl.rs
native/src/: capi.rs  lib.rs
src/client/java/com/github/sidit77/perfect_presentation/client/: InteropContext.java  InteropContextProvider.java  PerfectPresentationClient.java  PerfectPresentationNativeLibrary.java  WGLContext.java  WinError.java
src/client/java/com/github/sidit77/perfect_presentation/client/mixin/: MainTargetMixin.java  MinecraftMixin.java  RenderSystemMixin.java  WindowMixin.java
src/client/java/windows/win32/system/com/: IUnknownHelper.java
src/client/resources/: perfect_presentation.client.mixins.json
src/main/java/com/github/sidit77/perfect_presentation/: PerfectPresentation.java
src/main/java/com/github/sidit77/perfect_presentation/client/: ContextCreationFlags.java  InteropContext.java  InteropContextProvider.java  PerfectPresentationClient.java  WGLContext.java  WinError.java
src/main/java/com/github/sidit77/perfect_presentation/client/mixin/: MinecraftMixin.java  RenderSystemMixin.java  RenderTargetMixin.java  WindowMixin.java
src/main/resources/: fabric.mod.json  perfect_presentation.mixins.json
