[package]
name = "perfect_presentation"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[profile.dev]
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
heapless = "0.9.2"
crossbeam-utils = "0.8"
windows = { version = "0.62", default-features = false, features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_OpenGL",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_HiDpi",
    "Win32_System_Threading"
] }