[package]
name = "perfect_presentation_core"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = "0.9.2"
windows = { version = "0.62", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_OpenGL",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_HiDpi"
] }